Fix Bug #59876 Valgrind warning in i_s_innodb_set_page_type()